# vibesql-vault

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  msg-findings-5-6-done.txt  msg-nextpert-port.txt  msg-to-aurum.txt  msg-to-bapert-findings.txt  msg-to-dotnetpert-5-6.txt  msg-to-dotnetpert.txt  msg-to-qsapert.txt  vsql-vault.toml.example
crates/vsql-vault-core/: Cargo.toml
crates/vsql-vault-core/src/: access_log.rs  access_policy.rs  auth.rs  entry.rs  error.rs  lib.rs  memory.rs  purge.rs  retention.rs  storage.rs
crates/vsql-vault-server/: Cargo.toml
crates/vsql-vault-server/src/: api.rs  config.rs  health.rs  lib.rs  main.rs  middleware.rs  pg_storage.rs  state.rs
crates/vsql-vault-server/tests/: api_integration.rs
deploy/: Dockerfile
docs/: logging.md
docs/compliance/: pci-dss-v4-req3-attestation.md  pci-dss-v4-req3-audit-brief.md
migrations/: 001_create_vault_store.sql  002_access_retention_purge.sql  003_add_last_used_at_and_retention.sql
