[package]
name = "vsql-vault-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "vsql-vault-server"
path = "src/main.rs"

[lib]
name = "vsql_vault_server"
path = "src/lib.rs"

[dependencies]
vsql-vault-core = { path = "../vsql-vault-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "limit"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
constant_time_eq = "0.3"
tokio-rustls = "0.26"
rustls-pemfile = "2"

[dev-dependencies]
vsql-vault-core = { path = "../vsql-vault-core" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["util"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
